--- a/dashboard/templates/admin/admin_projects_list.html
+++ b/dashboard/templates/admin/admin_projects_list.html
@@ -45,7 +45,7 @@
 
                 {% for project in project_list %}
                 <tr>
-                  <td>00000{{project.id}}</td>
+                  <td>PROY-00{{project.id}}</td>
                   <td>Cliente nombre</td>
                   <td>{{project.id}} - {{project.name}}</td>
                   <td> {{project.created_at}} </td>
