--- a/client/templates/client/user_projects.html
+++ b/client/templates/client/user_projects.html
@@ -1,7 +1,7 @@
 {% extends 'main_header.html' %}
 {% load staticfiles %}
 
-
+{% load arduino_tags %}
 
 
 {% block main_content_wrapper %}
@@ -13,7 +13,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        ADMINISTRACIÓN DE PROYECTOS ACTIVOS
+        LISTA DE PROYECTOS
         <small>Control panel</small>
       </h1>
       <ol class="breadcrumb">
@@ -35,7 +35,7 @@
           <div class="box box-info">
             <div class="box-header with-border">
               <h3 class="box-title">
-                Listado de Proyectos
+                Proyectos Activos
               </h3>
               <div class="box-tools pull-right">
                 <button class="btn btn-box-tool" data-widget="collapse">
@@ -49,43 +49,51 @@
             <!-- /.box-header -->
             <div class="box-body">
               <div class="table-responsive">
-                <table class="table no-margin">
+                <table id="table_projects" class="table table-bordered table-striped">
                   <thead>
                     <tr>
                       <th>ID Proyecto</th>
                       <th>Nombre</th>
-                      <th>No. de IoTs</th>
+                      <th>No. de Sistemas</th>
+                      <th>Fecha Creación</th>
                       <th>Estatus</th>
+                      <th>Acciones</th>
                     </tr>
                   </thead>
                   <tbody>
 
                     {% for project in project_list %}
-
                     <tr>
                       <td>
-                        <a href="/dash/projects/{{project.id}}">Proyecto - {{project.id}}</a>
+                        <a href="/dash/projects/{{project.id}}">Proy-00{{project.id}}</a>
                       </td>
-                      <td>{{project}}</td>
+                      <td>{{project.name}}</td>
                       <td>{{project.arduinos.count}}</td>
+                      <td>{{project.created_at}}</td>
+
+                      {% if  project.id|isEven == 0%}
+                        <td> <span class="label label-danger">{{project.get_estatus_display }}</span> </td>
+                      {% else %}
+                        <td> <span class="label label-success">{{project.get_estatus_display }}</span> </td>
+                      {% endif %}
+
                       <td>
-                        <span class="label label-success">Correcto</span>
+                        <div class="btn-group">
+                          <a href="/dash/projects/{{project.id}}" target="_self">
+                            <button  type="button" class="btn btn-success">Ver</button>
+                          </a>
+                        </div>
                       </td>
                     </tr>
-
                     {% endfor %}
-                    
+
                   </tbody>
                 </table>
               </div>
               <!-- /.table-responsive -->
             </div>
             <!-- /.box-body -->
-            <div class="box-footer clearfix">
-              <a href="javascript::;" class="btn btn-sm btn-default btn-flat pull-right">
-                Ver detalle del Proyecto
-              </a>
-            </div>
+
             <!-- /.box-footer -->
           </div>
           <!-- /.box -->
@@ -99,3 +107,26 @@
   <!-- /.content-wrapper -->
 
 {% endblock main_content_wrapper %}
+
+
+
+{% block content_js %}
+  <script src="{% static 'plugins/datatables/jquery.dataTables.min.js' %}"></script>
+  <script src="{% static 'plugins/datatables/dataTables.bootstrap.min.js' %}"></script>
+  <!-- page script -->
+<script type="application/javascript">
+
+  $(function () {
+    $('#table_projects').DataTable({
+      "paging": true,
+      "lengthChange": false,
+      "searching": true,
+      "ordering": true,
+      "info": true,
+      "autoWidth": false
+    });
+  });
+
+</script>
+
+{% endblock content_js %}
