Add sensait logos

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
   {% endblock content_css %}
 
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-black sidebar-mini">
   <div class="wrapper">
 
     {% block main_header %}
