--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -63,7 +63,8 @@
 					<div class="row">
 						<div class="col-md-1"></div>
 						<div class="col-md-10 wow fadeIn" data-wow-delay="0.3s">
-							<h1 class="text-upper">SENSA IT LANDING PAGE...</h1>
+							<img src="{% static 'sensait/logos/Sensait_logo_big.png' %} " class="img-responsive" alt="feature img">
+              <br/><br/><br/>
 
               <a href="logins/" target="_self" ><button type="button" class="btn btn-warning btn-lg">LOGIN </button></a>
 
