Token updated and views

--- a/templates/system/login/login.html
+++ b/templates/system/login/login.html
@@ -31,7 +31,7 @@
 
   <div class="login-box">
     <div class="login-logo">
-      <a href="../../index2.html"><b>ADU LOGIN</a>
+      <a href="#"><b>ADU LOGIN</a>
     </div><!-- /.login-logo -->
     <div class="login-box-body">
       <p class="login-box-msg">Inicia sesión</p>
