CHange dashboard URLS to sensait.dyndns

--- a/client/templates/client/user_selected_sensor.html
+++ b/client/templates/client/user_selected_sensor.html
@@ -206,9 +206,10 @@
 
   <script type="application/javascript">
   var g ;
+  //uri: 'ws://dashboard:8000/ws/{{arduinosensor.arduino.arduino_token}}?subscribe-broadcast&publish-broadcast&echo',
  var canUseSocket = false;
   var ws4redis = WS4Redis({
-    uri: 'ws://dashboard:8000/ws/{{arduinosensor.arduino.arduino_token}}?subscribe-broadcast&publish-broadcast&echo',
+    uri: 'ws://sensait.dyndns.org:8000/ws/{{arduinosensor.arduino.arduino_token}}?subscribe-broadcast&publish-broadcast&echo',
     connecting: on_connecting,
     connected: on_connected,
     receive_message: receiveMessage,
@@ -308,7 +309,9 @@ function useWSData(data){
   var tableNameID = '#table_allData';
   var tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
   var allData;
-  var urlApi = 'http://dashboard:8000/api/arduinos/{{ arduinosensor.arduino.id }}/sensors/{{ arduinosensor.id }}/data/';
+  var urlApi = 'http://sensait.dyndns.org:8000/api/arduinos/{{ arduinosensor.arduino.id }}/sensors/{{ arduinosensor.id }}/data/';
+
+  //var urlApi = 'http://dashboard:8000/api/arduinos/{{ arduinosensor.arduino.id }}/sensors/{{ arduinosensor.id }}/data/';
 
   var _arduino;
   var _sensors;
@@ -472,7 +475,7 @@ function useWSData(data){
 
 
 {% block ws %}
-
+  //uri: 'ws://192.168.15.17:8000/ws/foobar?subscribe-broadcast&publish-broadcast&echo',
     var ws4redis = WS4Redis({
       uri: 'ws://192.168.15.17:8000/ws/foobar?subscribe-broadcast&publish-broadcast&echo',
       connecting: on_connecting,
