DEVEL  - PELUCHE - LOCAL CONFIGURATION

--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -235,8 +235,8 @@
   var tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
   var allData;
 
-  //var urlApiBase    = 'http://dashboard:8000/api/';
-  var urlApiBase    = 'http://sensait.dyndns.org:8000/api/';
+  var urlApiBase    = 'http://dashboard:8000/api/';
+  //var urlApiBase    = 'http://sensait.dyndns.org/api/';
 
   var actualProject = ' ' ;
   var actualArduino = ' ' ;
