--- a/templates/main_libs.html
+++ b/templates/main_libs.html
@@ -16,12 +16,15 @@
   <!-- iCheck -->
   <link rel="stylesheet" href="{% static 'plugins/iCheck/flat/blue.css' %}">
   <!-- Morris chart -->
-  <!-- jvectormap -->
+  <!-- jvectormap
   <link rel="stylesheet" href="{% static 'plugins/jvectormap/jquery-jvectormap-1.2.2.css' %}">
-  <!-- Date Picker -->
+   -->
+  <!-- Date Picker
   <link rel="stylesheet" href="{% static 'plugins/datepicker/datepicker3.css' %}">
-  <!-- Daterange picker -->
-  <link rel="stylesheet" href="{% static 'plugins/daterangepicker/daterangepicker-bs3.css' %}">
+  -->
+  <!-- Daterange picker-->
+  <link rel="stylesheet" href="{% static 'plugins/daterangepicker/daterangepicker.css' %}">
+
   <!-- bootstrap wysihtml5 - text editor -->
   <link rel="stylesheet" href="{% static 'plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css' %}">
 
